bppackaging/src/objects/Claim_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Subtotal__c</fullName>
        <formula>( Approved_Price__c *  Approved_Qty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>Claim_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>Claim__c</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>Claim_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claimed_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Claimed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claimed_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Claimed Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claimed_Subtotal__c</fullName>
        <formula>( Claimed_Price__c *  Claimed_Qty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claimed Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Variance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Variance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Desc__c</fullName>
        <label>Item/Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Payment_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SO Payment Role</label>
        <referenceTo>SO_Payment_Role__c</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>Claim_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Line Item</label>
        <referenceTo>Service_Order_Line_Item__c</referenceTo>
        <relationshipLabel>Claim Line Items</relationshipLabel>
        <relationshipName>Claim_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>(Approved_Subtotal__c * Tax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Variance_Amount__c</fullName>
        <label>Total Variance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance_Amount__c</fullName>
        <label>Variance Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variance_Qty__c</fullName>
        <label>Variance Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>( Approved_Subtotal__c -  Claimed_Subtotal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Claim Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CLI-{00000000}</displayFormat>
        <label>Claim Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>